src/test/test-models/bad/rng_loc5.stan
parameters {
  real y;
}
transformed parameters {
  real z;
  z = normal_rng(0, 1);
}
model {
}
